主頁位置配置完成

--- a/homePiexlWorld.html
+++ b/homePiexlWorld.html
@@ -15,16 +15,24 @@
             <table>
                 <tr>
                     <th>
-                        <h1>什麼是Pixel Art？</h1>
+                        <a href="">
+                            <h1>什麼是Pixel Art？</h1>
+                        </a>
                     </th>
                     <th>
-                        <h1>學習繪製Pixel Art</h1>
+                        <a href="">
+                            <h1>學習繪製Pixel Art</h1>
+                        </a>
                     </th>
                     <th>
-                        <h1>Pixel Art創作者推薦</h1>
+                        <a href="">
+                            <h1>Pixel Art創作者推薦</h1>
+                        </a>
                     </th>
                     <th>
-                        <h1>Pixel Art風格遊戲推薦</h1>
+                        <a href="">
+                            <h1>Pixel Art風格遊戲推薦</h1>
+                        </a>
                     </th>
                 </tr>
             </table>
@@ -33,7 +41,54 @@
 
     </div>
     <div class="main">
-        <img src="Assets/PixelWorldTitle/PixelWorldTitle.gif">
+        <img id="logo" src="Assets/PixelWorldTitle/PixelWorldTitle.gif">
+        <section id="pixelNews">
+            <h2 id="pixelNewsTitle">Pixel World 新聞</h2>
+            <table >
+                <tr>
+                    <td class="tdNews">
+                        分類
+                    </td>
+                    <td class="tdNews">
+                        事件標題
+                    </td>
+                    <td class="tdNews">
+                        日期
+                    </td>
+                </tr>
+                <tr>
+                    <td class="borderNewsFrist" colspan="3"></td>
+                </tr>
+                <tr>
+                    <td class="tdNews">
+                        分類2
+                    </td>
+                    <td class="tdNews">
+                        事件標題2
+                    </td>
+                    <td class="tdNews">
+                        日期2
+                    </td>
+                </tr>
+                <tr>
+                    <td class="borderNews" colspan="3"></td>
+                </tr>
+                <tr>
+                    <td class="tdNews">
+                        分類2
+                    </td>
+                    <td class="tdNews">
+                        事件標題2
+                    </td>
+                    <td class="tdNews">
+                        日期2
+                    </td>
+                </tr>
+                <tr>
+                    <td class="borderNews" colspan="3"></td>
+                </tr>
+            </table>
+        </section>
     </div>
     <div class="foot">
 
