--- a/welcomeToPixelWorld.html
+++ b/welcomeToPixelWorld.html
@@ -2,9 +2,9 @@
 <html lang="zh-TW">
 
 <head>
-    <link rel=stylesheet type="text/css" href="welcomeToPiexlWorld.css">
+    <link rel=stylesheet type="text/css" href="Assets/css/welcomeToPixelWorld.css">
     <meta charset="UTF-8">
-    <title>歡迎來到PiexlWorld</title>
+    <title>歡迎來到PixelWorld</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,8 +14,9 @@
 <body>
     <div id="container">
         <section id="title">
-            <a href="homePiexlWorld.html" title=""><img src="Assets/PixelWorldTitle/PixelWorldTitle.gif"></a>
-            <p>點 擊 以 進 入 Piexl World</p>
+            <a href="homePixelWorld.html" title=""><img src="Assets/PixelWorldTitle/PixelWorldTitle.gif">
+            <p>點 擊 以 進 入 Pixel World</p>
+        </a>
         </section>
     </div>
 </body>
