--- a/homePixelWorld.html
+++ b/homePixelWorld.html
@@ -61,13 +61,13 @@
                 </tr>
                 <tr>
                     <td class="tdNews">
-                        分類2
+                        站長公告
                     </td>
                     <td class="tdNews">
-                        事件標題2
+                        網站建置中
                     </td>
                     <td class="tdNews">
-                        日期2
+                        2021/12/22
                     </td>
                 </tr>
                 <tr>
