推介頁面模板完成

--- a/aboutPixel.html
+++ b/aboutPixel.html
@@ -39,9 +39,22 @@
         </section>
     </div>
 
+    <div class="sideLeft">
+        <section id="backHome">
+            <a href="homePixelWorld.html">
+                <h3>返回<br>主頁</h3>
+            </a>
+        </section>
+    </div>
+
+    <div class="sideRight">
+        
+    </div>
+
     <div class="main">
         <h1 id="aboutPixelTitle">什麼是Pixel Art？（像素藝術）</h1>
         <div id="lineBr"></div>
+        <p></p>
     </div>
 
 
