--- a/homePixelWorld.html
+++ b/homePixelWorld.html
@@ -37,14 +37,21 @@
                 </tr>
             </table>
         </section>
+    </div>
 
+    <div class="sideLeft">
 
     </div>
+
+    <div class="sideRight">
+        
+    </div>
+
     <div class="main">
         <img id="logo" src="Assets/PixelWorldTitle/PixelWorldTitle.gif">
         <section id="pixelNews">
             <h2 id="pixelNewsTitle">Pixel World 新聞</h2>
-            <table >
+            <table>
                 <tr>
                     <td class="tdNews">
                         分類
