--- a/howToDrawPixel.html
+++ b/howToDrawPixel.html
@@ -39,6 +39,18 @@
         </section>
     </div>
 
+    <div class="sideLeft">
+        <section id="backHome">
+            <a href="homePixelWorld.html">
+                <h3>返回<br>主頁</h3>
+            </a>
+        </section>
+    </div>
+
+    <div class="sideRight">
+        
+    </div>
+    
     <div class="main">
         <h1 id="howToDrawPixelTitle">從 0 開始畫像素教學</h1>
         <div id="lineBr"></div>
