--- a/aboutMaster.html
+++ b/aboutMaster.html
@@ -2,9 +2,9 @@
 <html lang="zh-TW">
 
 <head>
-    <link rel=stylesheet type="text/css" href="Assets/css/aboutPixel.css">
+    <link rel=stylesheet type="text/css" href="Assets/css/aboutMaster.css">
     <meta charset="UTF-8">
-    <title>PiexlWorld-關於Pixel Art</title>
+    <title>PiexlWorld-關於站長</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
 </head>
@@ -52,17 +52,33 @@
     </div>
 
     <div class="main">
-        <h1 id="aboutPixelTitle">什麼是Pixel Art？（像素藝術）</h1>
+        <h1 id="aboutPixelTitle">關於站長</h1>
         <div id="lineBr"></div>
-        <p>
-            像素畫是一種以「像素」（Pixel）為基本單位來製作的電腦繪圖表現形式。
-            <br> 像素畫以點陣圖（bitmap）的形式，從電腦最原始的圖像表現方法，演變成了一種獨立的數位藝術創作風格。
-            <br> 此風格通常被人稱為「像素藝術」（pixel art），有時也被稱為「點繪」（dot art）、「點圖」、「點畫」、「像素圖」、「dot繪」等。
-            <br><br> 以前並沒有「像素圖」這種風格，因為過去在電腦上製作的圖像全部都必須以像素為單位。
-            <br> 隨著電腦科技的發展，渲染圖像的功能越來越先進，數位藝術家也不再受到軟體限制，可以自由地創作作品。
-            <br> 製作像素圖時最重要的就是將過去受到的這些限制銘記在心。
-            <br> 雖然這種方法不是必須的，但在受限於舊科技的情況下或有在限的技術範圍內創作作品，能讓我們更像個藝術家。
-        </p>
+        <section id="aboutMaster">
+            <img src="Assets/img/who.png" width="160" height="160">
+            <table border="1" id="aboutme">
+                <tr>
+                    <td>
+                        <p>稱呼：02_3A717014</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>性別：男</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>居住地區：桃園市</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>興趣：聽歌、重訓、在網路上衝浪</p>
+                    </td>
+                </tr>
+            </table>
+        </section>
     </div>
 
 
