--- a/homePixelWorld.html
+++ b/homePixelWorld.html
@@ -40,11 +40,19 @@
     </div>
 
     <div class="sideLeft">
-
+        <section id="backHome">
+            <a href="welcomeToPixelWorld.html">
+                <h3>返回<br>標題</h3>
+            </a>
+        </section>
     </div>
 
     <div class="sideRight">
-        
+        <section id="toAboutMaster">
+            <a href="aboutMaster.html">
+                <h3>關於<br>站長</h3>
+            </a>
+        </section>
     </div>
 
     <div class="main">
@@ -71,10 +79,10 @@
                         站長公告
                     </td>
                     <td class="tdNews">
-                        網站建置中
+                        網站建置完成
                     </td>
                     <td class="tdNews">
-                        2021/12/22
+                        2022/01/02
                     </td>
                 </tr>
                 <tr>
@@ -82,13 +90,13 @@
                 </tr>
                 <tr>
                     <td class="tdNews">
-                        分類2
+                        站長公告
                     </td>
                     <td class="tdNews">
-                        事件標題2
+                        網站建置中
                     </td>
                     <td class="tdNews">
-                        日期2
+                        2021/12/22
                     </td>
                 </tr>
                 <tr>
