--- a/howToDrawPixelResource.html
+++ b/howToDrawPixelResource.html
@@ -49,58 +49,18 @@
 
     <div class="sideRight">
         <section id="toResorce">
-            <a href="howToDrawPixelResource.html">
-                <h3>相關<br>資源</h3>
+            <a href="howToDrawPixel.html">
+                <h3>返回<br>教學</h3>
             </a>
         </section>
     </div>
 
     <div class="main">
-        <h1 id="howToDrawPixelTitle">從 0 開始畫像素教學</h1>
+        <h1 id="howToDrawPixelTitle">相關連結</h1>
         <div id="lineBr"></div>
-        <p>
-            製作像素畫很簡單。基本上，具備「鉛筆工具」的繪圖軟體都可以製作出像素畫，站長很推薦的三款軟體。
-        </p>
-        <br>
-        <table id="paintSoftWare">
-            <tr>
-                <td>
-                    <img src="Assets/img/Paint-net-logo.png" width="100" height="100">
-                    <br>
-                    <p>Paint.NET(免費)</p>
-                </td>
-                <td>
-                    <img src="Assets/img/piskel_icon.png" width="100" height="100">
-                    <br>
-                    <p>Piskel(免費 網頁)</p>
-                </td>
-                <td>
-                    <IMG src="Assets/img/asepriteIcon.png" width="100" height="100">
-                    <br>
-                    <p>Aseprite(付費)</p>
-                </td>
-            </tr>
-        </table>
-        <p>
-            現在就開個8*8的畫布嘗試照著這三張圖體驗看看畫像素吧！
-        </p>
-        <table id="paintSoftWare">
-            <tr>
-                <td>
-                    <img src="Assets/img/icon1.png" width="100" height="100">
-
-                </td>
-                <td>
-                    <img src="Assets/img/icon2.png" width="100" height="100">
-
-                </td>
-                <td>
-                    <IMG src="Assets/img/icon3.png" width="100" height="100">
-
-                </td>
-            </tr>
-        </table>
-
+        <p><a href="https://www.plurk.com/p/mnkh2s" target="blank">千穗入門向像素教學</p>
+            <br>
+            <p><a href="https://youtube.com/playlist?list=PLUcMt2iD3UMzbDxvBFPzv-O_29i19UStq" target="blank">Los的Aseprite教學</p>
 
     </div>
 
