--- a/pixelArtistList.html
+++ b/pixelArtistList.html
@@ -70,7 +70,10 @@
                     <img src="Assets/artistIcon/APO.jpg" width="200" height="200">
                 </td>
                 <td class="tdList">
-                    <a href="https://twitter.com/apostrophe_dot" target="blank">推特</a>
+                    <p>姓名：APO
+                        <br>
+                        <a href="https://twitter.com/apostrophe_dot" target="blank">推特連結</a>
+                    </p>
                 </td>
             </tr>
 
@@ -79,7 +82,10 @@
                     <img src="Assets/artistIcon/donut_daisuki.jpg" width="200" height="200">
                 </td>
                 <td class="tdList">
-                    <a href="https://twitter.com/donut_daisuki" target="blank">推特</a>
+                    <p>姓名：山田太郎
+                        <br>
+                        <a href="https://twitter.com/donut_daisuki" target="blank">推特連結</a>
+                    </p>
                 </td>
 
             </tr>
@@ -89,7 +95,10 @@
                     <img src="Assets/artistIcon/hako.png" width="200" height="200">
                 </td>
                 <td class="tdList">
-                    <a href="https://twitter.com/clrfnd0" target="blank">推特</a>
+                    <p>姓名：hako 生活
+                        <br>
+                        <a href="https://twitter.com/clrfnd" target="blank">推特連結</a>
+                    </p>
                 </td>
             </tr>
         </table>
@@ -102,9 +111,27 @@
                 </td>
                 <td>
                     <a href="pixelArtistList_2.html" title="">
-                        <h2>2</h2>
+                        <h2>2&emsp;</h2>
                     </a>
                 </td>
+                <td>
+                    <a href="pixelArtistList_3.html" title="">
+                        <h2>3&emsp;</h2>
+                    </a>
+                </td>
+                <td>
+                    <a href="pixelArtistList_4.html" title="">
+                        <h2>4</h2>
+                    </a>
+                </td>
+                <td>
+                    <a href="pixelArtistList_5.html" title="">
+                        <h2>5</h2>
+                    </a>
+                </td>
+
+            </tr>
+            </tr>
         </table>
     </div>
 
