--- a/pixelGametList_2.html
+++ b/pixelGametList_2.html
@@ -60,34 +60,34 @@
         <table border="2" id="gameTable">
             <tr>
                 <td class="tdName">
-                    圖片
+                    頭像
                 </td>
                 <td class="tdList">
-                    遊戲連結
+                    相關連結
                 </td>
             </tr>
             <tr>
                 <td class="tdName">
-                    <img src="Assets/gameIcon/rabiribi.jpg" width="360">
+                    <img src="Assets/gameIcon/deadcell.jpg" width="360">
                 </td>
                 <td class="tdList">
                     <p>
-                        名稱：Rabi-Ribi
+                        名稱：Dead&ensp;Cells
                         <br>
-                        <a href="https://store.steampowered.com/app/400910/RabiRibi/" target="blank">Steam連結</a>
+                        <a href="https://store.steampowered.com/app/588650/Dead_Cells/" target="blank">Steam連結</a>
                     </p>
                 </td>
             </tr>
 
             <tr>
                 <td class="tdName">
-                    <img src="Assets/gameIcon/Blasphemous.jpg" width="360">
+                    <img src="Assets/gameIcon/noita.jpg" width="360">
                 </td>
                 <td class="tdList">
                     <p>
-                        名稱：Blasphemous
+                        名稱：Noita
                         <br>
-                        <a href="https://store.steampowered.com/app/774361/Blasphemous/" target="blank">Steam連結</a>
+                        <a href="https://store.steampowered.com/app/881100/Noita/" target="blank">Steam連結</a>
                     </p>
 
                 </td>
@@ -96,13 +96,13 @@
 
             <tr>
                 <td class="tdName">
-                    <img src="Assets/gameIcon/momodora.jpg" width="360">
+                    <img src="Assets/gameIcon/WizardofLegend.jpg" width="360">
                 </td>
                 <td class="tdList">
                     <p>
-                        名稱：Momodora:&ensp;Reverie&ensp;Under&ensp;The&ensp;Moonlight
+                        名稱：Wizard&ensp;of&ensp;Legend
                         <br>
-                        <a href="https://store.steampowered.com/app/428550/Momodora_Reverie_Under_The_Moonlight/" target="blank">Steam連結</a>
+                        <a href="https://store.steampowered.com/app/445980/Wizard_of_Legend/" target="blank">Steam連結</a>
                     </p>
                 </td>
             </tr>
@@ -112,12 +112,12 @@
         <table id="page">
             <tr>
                 <td>
-                    <h2>1&emsp;</h2>
+                    <a href="pixelGametList.html" title="">
+                        <h2>1&emsp;</h2>
+                    </a>
                 </td>
                 <td>
-                    <a href="pixelGametList_2.html" title="">
-                        <h2>2&emsp;</h2>
-                    </a>
+                    <h2>2&emsp;</h2>
                 </td>
                 <td>
                     <a href="pixelGametList_3.html" title="">
