--- a/pixelGametList_3.html
+++ b/pixelGametList_3.html
@@ -60,34 +60,34 @@
         <table border="2" id="gameTable">
             <tr>
                 <td class="tdName">
-                    圖片
+                    頭像
                 </td>
                 <td class="tdList">
-                    遊戲連結
+                    相關連結
                 </td>
             </tr>
             <tr>
                 <td class="tdName">
-                    <img src="Assets/gameIcon/rabiribi.jpg" width="360">
+                    <img src="Assets/gameIcon/LunaNights.jpg" width="360">
                 </td>
                 <td class="tdList">
                     <p>
-                        名稱：Rabi-Ribi
+                        名稱：Touhou&ensp;Luna&ensp;Nights
                         <br>
-                        <a href="https://store.steampowered.com/app/400910/RabiRibi/" target="blank">Steam連結</a>
+                        <a href="https://store.steampowered.com/app/851100/Touhou_Luna_Nights/" target="blank">Steam連結</a>
                     </p>
                 </td>
             </tr>
 
             <tr>
                 <td class="tdName">
-                    <img src="Assets/gameIcon/Blasphemous.jpg" width="360">
+                    <img src="Assets/gameIcon/LostRuins.jpg" width="360">
                 </td>
                 <td class="tdList">
                     <p>
-                        名稱：Blasphemous
+                        名稱：Lost&ensp;Ruins
                         <br>
-                        <a href="https://store.steampowered.com/app/774361/Blasphemous/" target="blank">Steam連結</a>
+                        <a href="https://store.steampowered.com/app/1306630/Lost_Ruins/" target="blank">Steam連結</a>
                     </p>
 
                 </td>
@@ -96,13 +96,13 @@
 
             <tr>
                 <td class="tdName">
-                    <img src="Assets/gameIcon/momodora.jpg" width="360">
+                    <img src="Assets/gameIcon/LastCommand.jpg" width="360">
                 </td>
                 <td class="tdList">
                     <p>
-                        名稱：Momodora:&ensp;Reverie&ensp;Under&ensp;The&ensp;Moonlight
+                        名稱：Last&ensp;Command
                         <br>
-                        <a href="https://store.steampowered.com/app/428550/Momodora_Reverie_Under_The_Moonlight/" target="blank">Steam連結</a>
+                        <a href="https://store.steampowered.com/app/1487270/Last_Command/" target="blank">Steam連結</a>
                     </p>
                 </td>
             </tr>
@@ -112,7 +112,9 @@
         <table id="page">
             <tr>
                 <td>
-                    <h2>1&emsp;</h2>
+                    <a href="pixelGametList.html" title="">
+                        <h2>1&emsp;</h2>
+                    </a>
                 </td>
                 <td>
                     <a href="pixelGametList_2.html" title="">
@@ -120,9 +122,7 @@
                     </a>
                 </td>
                 <td>
-                    <a href="pixelGametList_3.html" title="">
-                        <h2>3&emsp;</h2>
-                    </a>
+                    <h2>3&emsp;</h2>
                 </td>
                 <td>
                     <a href="pixelGametList_4.html" title="">
