--- a/pixelGametList_4.html
+++ b/pixelGametList_4.html
@@ -60,34 +60,34 @@
         <table border="2" id="gameTable">
             <tr>
                 <td class="tdName">
-                    圖片
+                    頭像
                 </td>
                 <td class="tdList">
-                    遊戲連結
+                    相關連結
                 </td>
             </tr>
             <tr>
                 <td class="tdName">
-                    <img src="Assets/gameIcon/rabiribi.jpg" width="360">
+                    <img src="Assets/gameIcon/Eastward.jpg" width="360">
                 </td>
                 <td class="tdList">
                     <p>
-                        名稱：Rabi-Ribi
+                        名稱：風來之國
                         <br>
-                        <a href="https://store.steampowered.com/app/400910/RabiRibi/" target="blank">Steam連結</a>
+                        <a href="https://store.steampowered.com/app/977880/_Eastward/" target="blank">Steam連結</a>
                     </p>
                 </td>
             </tr>
 
             <tr>
                 <td class="tdName">
-                    <img src="Assets/gameIcon/Blasphemous.jpg" width="360">
+                    <img src="Assets/gameIcon/UNSIGHTED.jpg" width="360">
                 </td>
                 <td class="tdList">
                     <p>
-                        名稱：Blasphemous
+                        名稱：UNSIGHTED
                         <br>
-                        <a href="https://store.steampowered.com/app/774361/Blasphemous/" target="blank">Steam連結</a>
+                        <a href="https://store.steampowered.com/app/1062110/UNSIGHTED/" target="blank">Steam連結</a>
                     </p>
 
                 </td>
@@ -96,13 +96,13 @@
 
             <tr>
                 <td class="tdName">
-                    <img src="Assets/gameIcon/momodora.jpg" width="360">
+                    <img src="Assets/gameIcon/伊甸之路.jpg" width="360">
                 </td>
                 <td class="tdList">
                     <p>
-                        名稱：Momodora:&ensp;Reverie&ensp;Under&ensp;The&ensp;Moonlight
+                        名稱：伊甸之路
                         <br>
-                        <a href="https://store.steampowered.com/app/428550/Momodora_Reverie_Under_The_Moonlight/" target="blank">Steam連結</a>
+                        <a href="https://store.steampowered.com/app/960690/_/" target="blank">Steam連結</a>
                     </p>
                 </td>
             </tr>
@@ -112,7 +112,9 @@
         <table id="page">
             <tr>
                 <td>
-                    <h2>1&emsp;</h2>
+                    <a href="pixelGametList.html" title="">
+                        <h2>1&emsp;</h2>
+                    </a>
                 </td>
                 <td>
                     <a href="pixelGametList_2.html" title="">
@@ -125,9 +127,7 @@
                     </a>
                 </td>
                 <td>
-                    <a href="pixelGametList_4.html" title="">
-                        <h2>4</h2>
-                    </a>
+                    <h2>4</h2>
                 </td>
             </tr>
         </table>
