--- a/pixelArtistList_5.html
+++ b/pixelArtistList_5.html
@@ -2,9 +2,9 @@
 <html lang="zh-TW">
 
 <head>
-    <link rel=stylesheet type="text/css" href="Assets/css/pixelGameList.css">
+    <link rel=stylesheet type="text/css" href="Assets/css/pixelArtistList.css">
     <meta charset="UTF-8">
-    <title>PiexlWorld-Pixel Art風格遊戲推薦</title>
+    <title>PiexlWorld-Pixel Art創作者推薦</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
 </head>
@@ -12,6 +12,7 @@
 <body>
     <div class="header">
         <section id="webMap">
+
             <table>
                 <tr>
                     <th>
@@ -52,42 +53,41 @@
     </div>
 
     <div class="main">
-        <h1 id="pixelGameListTitle">Pixel Art風格遊戲推薦列表</h1>
+        <h1 id="pixelArtistListTitle">Pixel Art創作者推薦列表</h1>
         <div id="lineBr"></div>
         <div id="pxBr"></div>
 
-
-        <table border="2" id="gameTable">
+        <table border="2" id="artistTable">
             <tr>
                 <td class="tdName">
-                    圖片
+                    頭像
                 </td>
                 <td class="tdList">
-                    遊戲連結
+                    相關連結
                 </td>
             </tr>
             <tr>
                 <td class="tdName">
-                    <img src="Assets/gameIcon/rabiribi.jpg" width="360">
+                    <img src="Assets/artistIcon/chibikk.png" width="200" height="200">
                 </td>
                 <td class="tdList">
                     <p>
-                        名稱：Rabi-Ribi
+                        姓名：chibikki
                         <br>
-                        <a href="https://store.steampowered.com/app/400910/RabiRibi/" target="blank">Steam連結</a>
+                        <a href="https://twitter.com/chibikki_ikki" target="blank">推特連結</a>
                     </p>
                 </td>
             </tr>
 
             <tr>
                 <td class="tdName">
-                    <img src="Assets/gameIcon/Blasphemous.jpg" width="360">
+                    <img src="Assets/artistIcon/Rein.png" width="200" height="200">
                 </td>
                 <td class="tdList">
                     <p>
-                        名稱：Blasphemous
+                        姓名：Rein
                         <br>
-                        <a href="https://store.steampowered.com/app/774361/Blasphemous/" target="blank">Steam連結</a>
+                        <a href="https://twitter.com/Rein55523042" target="blank">推特連結</a>
                     </p>
 
                 </td>
@@ -96,13 +96,13 @@
 
             <tr>
                 <td class="tdName">
-                    <img src="Assets/gameIcon/momodora.jpg" width="360">
+                    <img src="Assets/artistIcon/SalmonFormosa.jpg" width="200" height="200">
                 </td>
                 <td class="tdList">
                     <p>
-                        名稱：Momodora:&ensp;Reverie&ensp;Under&ensp;The&ensp;Moonlight
+                        姓名：SalmonFormosa
                         <br>
-                        <a href="https://store.steampowered.com/app/428550/Momodora_Reverie_Under_The_Moonlight/" target="blank">Steam連結</a>
+                        <a href="https://twitter.com/SalmonFormosa" target="blank">推特連結</a>
                     </p>
                 </td>
             </tr>
@@ -112,22 +112,28 @@
         <table id="page">
             <tr>
                 <td>
-                    <h2>1&emsp;</h2>
+                    <a href="pixelArtistList.html" title="">
+                        <h2>1&emsp;</h2>
+                    </a>
                 </td>
                 <td>
-                    <a href="pixelGametList_2.html" title="">
+
+                    <a href="pixelArtistList_2.html" title="">
                         <h2>2&emsp;</h2>
                     </a>
                 </td>
                 <td>
-                    <a href="pixelGametList_3.html" title="">
+                    <a href="pixelArtistList_3.html" title="">
                         <h2>3&emsp;</h2>
                     </a>
                 </td>
                 <td>
-                    <a href="pixelGametList_4.html" title="">
+                    <a href="pixelArtistList_4.html" title="">
                         <h2>4</h2>
                     </a>
+                </td>
+                <td>
+                    <h2>5</h2>
                 </td>
             </tr>
         </table>
